Closed Bug 383473 Opened 18 years ago Closed 18 years ago

exit from _XIOError when using a large font-size-adjust value

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9alpha6

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: crash, testcase)

Attachments

(3 files, 1 obsolete file)

exit from _XIOError when using a large font-size-adjust value. The clamping in bug 348462 is not enough, we need to clamp the final font size after font-size-adjust have been applied.
Attached file stack
Attached patch Patch rev. 1 (obsolete) — Splinter Review
Attachment #267448 - Flags: superreview?(vladimir)
Attachment #267448 - Flags: review?(vladimir)
Comment on attachment 267448 [details] [diff] [review] Patch rev. 1 Ugh, I was afraid of that. The gfx/src/windows change is unnecessary -- nothing calls that (and it probably won't even compile, FONT_MAX_SIZE isn't efined there) However, for the other stuff, can you add a helper method on gfxFontStyle that you can pass an aspect gfxFloat, that'll return the adjusted size? style->GetAdjustedSize(aspect) or something, that'll do the clamping in one place? That way we don't have to duplicate a bunch of this code all over the place and can instead just do mAdjustedSize = GetStyle->GetAdjustedSize(...)
Attachment #267448 - Flags: superreview?(vladimir)
Attachment #267448 - Flags: review?(vladimir)
Attachment #267448 - Flags: review-
Component: GFX → GFX: Thebes
QA Contact: general → thebes
Attached patch Patch rev. 2Splinter Review
Regarding the NS_round/ROUND difference: since this is a once per font calculation I think we can live with the redundant > 0 check that NS_round has in this case...
Attachment #267448 - Attachment is obsolete: true
Attachment #267619 - Flags: superreview?(vladimir)
Attachment #267619 - Flags: review?(vladimir)
Comment on attachment 267619 [details] [diff] [review] Patch rev. 2 Looks good, thanks!
Attachment #267619 - Flags: superreview?(vladimir)
Attachment #267619 - Flags: superreview+
Attachment #267619 - Flags: review?(vladimir)
Attachment #267619 - Flags: review+
Checked in to trunk at 2007-06-08 01:22 PDT. -> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha6
Blocks: 369688
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: