Clamp final font size (after font-size-adjust) to a reasonable value. b=383473 r+sr=vladimir